--- a/12-Advanced Python Modules/Excercise.ipynb
+++ b/12-Advanced Python Modules/Excercise.ipynb
@@ -26,10 +26,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.ipynb_checkpoints',\n",
+       " '00-Collections-Module.ipynb',\n",
+       " '01-Opening-and-Reading-Files-Folders.ipynb',\n",
+       " '02-Datetime-Module.ipynb',\n",
+       " '03-Math-and-Random-Module.ipynb',\n",
+       " '04-Python Debugger (pdb).ipynb',\n",
+       " '05-Overview-of-Regular-Expressions.ipynb',\n",
+       " '06-Timing your code - timeit.ipynb',\n",
+       " '07-Unzipping-and-Zipping-Files.ipynb',\n",
+       " '08-Advanced-Python-Module-Exercise',\n",
+       " 'Example_Top_Level',\n",
+       " 'Excercise.ipynb',\n",
+       " 'notes.ipynb']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import shutil\n",
+    "os.listdir()\n",
+    "shutil.move()"
+   ]
   },
   {
    "cell_type": "code",
