--- a/12-Advanced Python Modules/notes.ipynb
+++ b/12-Advanced Python Modules/notes.ipynb
@@ -55,6 +55,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Walking through a directory\n",
+    "\n",
+    "for folder , sub_folders , files in os.walk(\"Example_Top_Level\"):\n",
+    "    \n",
+    "    print(\"Currently looking at folder: \"+ folder)\n",
+    "    print('\\n')\n",
+    "    print(\"THE SUBFOLDERS ARE: \")\n",
+    "    for sub_fold in sub_folders:\n",
+    "        print(\"\\t Subfolder: \"+sub_fold )\n",
+    "    \n",
+    "    print('\\n')\n",
+    "    \n",
+    "    print(\"THE FILES ARE: \")\n",
+    "    for f in files:\n",
+    "        print(\"\\t File: \"+f)\n",
+    "    print('\\n')\n",
+    "    \n",
+    "    # Now look at subfolders"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
