--- a/12-Advanced Python Modules/Excercise.ipynb
+++ b/12-Advanced Python Modules/Excercise.ipynb
@@ -446,23 +446,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['.ipynb_checkpoints',\n",
-       " '01-Collections Module.ipynb',\n",
-       " '02-Datetime.ipynb',\n",
-       " '03-Python Debugger (pdb).ipynb',\n",
-       " '04-Timing your code - timeit.ipynb',\n",
-       " '05-Regular Expressions - re.ipynb',\n",
-       " '06-StringIO.ipynb',\n",
-       " 'Excercise.ipynb']"
+       " '00-Collections-Module.ipynb',\n",
+       " '01-Opening-and-Reading-Files-Folders.ipynb',\n",
+       " '02-Datetime-Module.ipynb',\n",
+       " '03-Math-and-Random-Module.ipynb',\n",
+       " '04-Python Debugger (pdb).ipynb',\n",
+       " '05-Overview-of-Regular-Expressions.ipynb',\n",
+       " '06-Timing your code - timeit.ipynb',\n",
+       " '07-Unzipping-and-Zipping-Files.ipynb',\n",
+       " '08-Advanced-Python-Module-Exercise',\n",
+       " 'Example_Top_Level',\n",
+       " 'Excercise.ipynb',\n",
+       " 'notes.ipynb']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,6 +475,214 @@
    "source": [
     "os.listdir()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Currently looking at folder: C:\\HiLookVision\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "\t Subfolder: capture\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\t File: iVMS4200_20201215.zip\n",
+      "\t File: iVMS4200_20201223.zip\n",
+      "\t File: iVMS4200_20210111.zip\n",
+      "\t File: iVMS4200_20210125.zip\n",
+      "\t File: iVMS4200_20210204.zip\n",
+      "\t File: iVMS4200_20210215.zip\n",
+      "\t File: iVMS4200_20210222.zip\n",
+      "\t File: iVMS4200_20210327.zip\n",
+      "\t File: iVMS4200_20210404.zip\n",
+      "\t File: iVMS4200_20210411.zip\n",
+      "\t File: iVMS4200_20210421.zip\n",
+      "\t File: iVMS4200_20210524.zip\n",
+      "\t File: iVMS4200_20210710.zip\n",
+      "\t File: iVMS4200_20210904.zip\n",
+      "\t File: iVMS4200_20210911.zip\n",
+      "\t File: iVMS4200_20210918.zip\n",
+      "\t File: iVMS4200_20211028.zip\n",
+      "\n",
+      "\n",
+      "\t Subfolder: video\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\t File: iVMS4200_20201215.zip\n",
+      "\t File: iVMS4200_20201223.zip\n",
+      "\t File: iVMS4200_20210111.zip\n",
+      "\t File: iVMS4200_20210125.zip\n",
+      "\t File: iVMS4200_20210204.zip\n",
+      "\t File: iVMS4200_20210215.zip\n",
+      "\t File: iVMS4200_20210222.zip\n",
+      "\t File: iVMS4200_20210327.zip\n",
+      "\t File: iVMS4200_20210404.zip\n",
+      "\t File: iVMS4200_20210411.zip\n",
+      "\t File: iVMS4200_20210421.zip\n",
+      "\t File: iVMS4200_20210524.zip\n",
+      "\t File: iVMS4200_20210710.zip\n",
+      "\t File: iVMS4200_20210904.zip\n",
+      "\t File: iVMS4200_20210911.zip\n",
+      "\t File: iVMS4200_20210918.zip\n",
+      "\t File: iVMS4200_20211028.zip\n",
+      "\n",
+      "\n",
+      "Currently looking at folder: C:\\HiLookVision\\capture\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "\t Subfolder: 20201129\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "\t Subfolder: 20201130\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "\t Subfolder: 20210911\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "Currently looking at folder: C:\\HiLookVision\\capture\\20201129\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "Currently looking at folder: C:\\HiLookVision\\capture\\20201130\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "Currently looking at folder: C:\\HiLookVision\\capture\\20210911\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "Currently looking at folder: C:\\HiLookVision\\video\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "\t Subfolder: 20201130\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "\t Subfolder: 20210329\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "\t Subfolder: 20210403\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "\t Subfolder: RecordFile\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "Currently looking at folder: C:\\HiLookVision\\video\\20201130\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "Currently looking at folder: C:\\HiLookVision\\video\\20210329\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "Currently looking at folder: C:\\HiLookVision\\video\\20210403\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "Currently looking at folder: C:\\HiLookVision\\video\\RecordFile\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "\t Subfolder: 20210206\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "Currently looking at folder: C:\\HiLookVision\\video\\RecordFile\\20210206\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "\t Subfolder: 192.168.100.2_8000_1_1_-1\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "\t Subfolder: 192.168.100.2_8000_2_2_-1\n",
+      "\n",
+      "\n",
+      "THE FILES ARE: \n",
+      "\n",
+      "\n",
+      "Currently looking at folder: C:\\HiLookVision\\video\\RecordFile\\20210206\\192.168.100.2_8000_1_1_-1\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n",
+      "Currently looking at folder: C:\\HiLookVision\\video\\RecordFile\\20210206\\192.168.100.2_8000_2_2_-1\n",
+      "\n",
+      "\n",
+      "THE SUBFOLDERS ARE: \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "os_walk = os.walk(\"c:\\\\users\")\n",
+    "\n",
+    "# os_walk.\n",
+    "#for folder,sub_folders,files in os.walk(\"c:\\\\users\" )  :\n",
+    "#    print (f\"Folder Name: {folder}\")\n",
+    "\n",
+    "for folder , sub_folders , files in os.walk(\"C:\\HiLookVision\"):\n",
+    "    print(\"Currently looking at folder: \"+ folder)\n",
+    "    print('\\n')\n",
+    "    print(\"THE SUBFOLDERS ARE: \")\n",
+    "    for sub_fold in sub_folders:\n",
+    "        print(\"\\t Subfolder: \"+sub_fold )\n",
+    "        print('\\n')\n",
+    "        print(\"THE FILES ARE: \")\n",
+    "\n",
+    "        for f in files:\n",
+    "            print(\"\\t File: \"+f)\n",
+    "        print('\\n')\n",
+    "    \n",
+    "    # Now look at subfolders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
