--- a/12-Advanced Python Modules/Excercise.ipynb
+++ b/12-Advanced Python Modules/Excercise.ipynb
@@ -60,6 +60,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the date \n",
+      "02:20:00\n",
+      "printing the type  <class 'datetime.time'>\n",
+      "printing the hour\n",
+      "mytime is \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "mydate = datetime.time(2,20)\n",
+    "\n",
+    "print(\"Printing the date \")\n",
+    "print (mydate)\n",
+    "\n",
+    "print(\"printing the type  \" + str(type(mydate)) )\n",
+    "\n",
+    "print (\"printing the hour\")\n",
+    "\n",
+    "mydate.hour\n",
+    "\n",
+    "\n",
+    "mytime = datetime.date.today()\n",
+    "\n",
+    "print (\"mytime is \")\n",
+    "mytime.day\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
