--- a/12-Advanced Python Modules/notes-12.ipynb
+++ b/12-Advanced Python Modules/notes-12.ipynb
@@ -31,6 +31,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## datetime Module\n",
+    "import datetime\n",
+    "\n",
+    "t = datetime.time(4, 20, 1)\n",
+    "\n",
+    "today = datetime.date.today()\n",
+    "\n",
+    "### Arithmetic\n",
+    "    >To find out the differences in dates\n",
+    "    <p1> datetime.date(2015, 3, 11) - datetime.date(1990, 3, 11)\n",
+    "    datetime.timedelta(days=9131)\n",
+    "    <p1/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Moving files around\n",
     "\n",
     "import shutil\n",
