--- a/12-Advanced Python Modules/notes-12.ipynb
+++ b/12-Advanced Python Modules/notes-12.ipynb
@@ -39,10 +39,8 @@
     "today = datetime.date.today()\n",
     "\n",
     "### Arithmetic\n",
-    "    >To find out the differences in dates\n",
-    "    <p1> datetime.date(2015, 3, 11) - datetime.date(1990, 3, 11)\n",
-    "    datetime.timedelta(days=9131)\n",
-    "    <p1/>\n"
+    "    datetime.date(2015, 3, 11) - datetime.date(1990, 3, 11)\n",
+    "    datetime.timedelta(days=9131)\n"
    ]
   },
   {
