--- a/12-Advanced Python Modules/notes-12.ipynb
+++ b/12-Advanced Python Modules/notes-12.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## OS Module\n",
+    "# OS Module\n",
     "import os\n",
     "\n",
     "os.listdir()\n",
