--- a/12-Advanced Python Modules/notes-12.ipynb
+++ b/12-Advanced Python Modules/notes-12.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## datetime Module\n",
+    "# datetime Module\n",
     "import datetime\n",
     "\n",
     "t = datetime.time(4, 20, 1)\n",
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Moving files around\n",
+    "# Moving files around\n",
     "\n",
     "import shutil\n",
     "\n",
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Walking through a directory\n",
+    "# Walking through a directory\n",
     "\n",
     "for folder , sub_folders , files in os.walk(\"Example_Top_Level\"):\n",
     "    \n",
