--- a/12-Advanced Python Modules/Excercise-12.ipynb
+++ b/12-Advanced Python Modules/Excercise-12.ipynb
@@ -145,12 +145,17 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "datetime.date(2015, 3, 11) - datetime.date(1990, 3, 11)\n",
-    "\n",
-    "\n",
-    "\n"
+    "datetime.date(2015, 3, 11) - datetime.date(1990, 3, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "#help(math)"
    ]
   },
   {
@@ -177,6 +182,13 @@
     "string1 = \"heloworld\"\n",
     "new_counter = Counter(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
