--- a/12-Advanced Python Modules/Excercise-12.ipynb
+++ b/12-Advanced Python Modules/Excercise-12.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "import shutil\n",
     "os.listdir()\n",
-    "shutil.move()"
+    "shutil.move()\n"
    ]
   },
   {
@@ -104,6 +104,7 @@
     "\n",
     "print (\"mytime is \")\n",
     "mytime.day\n",
+    "\n",
     "\n"
    ]
   },
@@ -157,6 +158,20 @@
     "import math\n",
     "#help(math)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
