--- a/12-Advanced Python Modules/notes-12.ipynb
+++ b/12-Advanced Python Modules/notes-12.ipynb
@@ -114,6 +114,47 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Math and random Module\n",
+    "import Math\n",
+    "help(math)   <<< Will list help about this function. >>>\n",
+    "## Rand number\n",
+    "floor\n",
+    "ceil\n",
+    "\n",
+    "round < This is part of python module >\n",
+    "round(4.5)\n",
+    "4\n",
+    "round(5.5)\n",
+    "6\n",
+    "#### Note the differences in the output.\n",
+    "#### There are many functions . This can be checked using help functions. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
