--- a/12-Advanced Python Modules/notes-12.ipynb
+++ b/12-Advanced Python Modules/notes-12.ipynb
@@ -125,12 +125,21 @@
     "ceil\n",
     "\n",
     "round < This is part of python module >\n",
+    "\n",
     "round(4.5)\n",
     "4\n",
+    "\n",
     "round(5.5)\n",
     "6\n",
-    "#### Note the differences in the output.\n",
-    "#### There are many functions . This can be checked using help functions. \n"
+    "\n",
+    "> _Note the differences in the output._\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### There are many functions . This can be checked using help functions. \n",
+    "\n",
+    "## Random Module\n",
+    "###understanding the seed. "
    ]
   },
   {
@@ -141,18 +150,14 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. Hello\n",
+    "2. Second. \n",
+    "    1. sub 1. \n",
+    "    2. Sub 2. "
+   ]
   },
   {
    "cell_type": "code",
