--- a/12-Advanced Python Modules/notes-12.ipynb
+++ b/12-Advanced Python Modules/notes-12.ipynb
@@ -139,7 +139,19 @@
     "#### There are many functions . This can be checked using help functions. \n",
     "\n",
     "## Random Module\n",
-    "###understanding the seed. "
+    "### understanding the seed.\n",
+    "random.randint(0,100)\n",
+    "68\n",
+    "\n",
+    "The above is to get same batch of random numbers. Typically for testing purposes. \n",
+    "\n",
+    "Ex:- random.seed(101)\n",
+    "    random.randint(0,100)\n",
+    "\n",
+    "    _Running a code like this will result in same random number generation repeatedly_ \n",
+    "    random.choices(mylist)\n",
+    "\n",
+    "    random.choices(population=mylist, k=100)\n"
    ]
   },
   {
@@ -153,11 +165,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Hello\n",
-    "2. Second. \n",
-    "    1. sub 1. \n",
-    "    2. Sub 2. "
+    "# Python Debugger\n",
+    "Setting a trace\n",
+    "\n",
+    "    import pdb\n",
+    "    x = [1,2,3]\n",
+    "    y = 2\n",
+    "    z = 3\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
