--- a/13-Web-Scraping/Excercise-13.ipynb
+++ b/13-Web-Scraping/Excercise-13.ipynb
@@ -2,36 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<!doctype html>\\n<html>\\n<head>\\n    <title>Example Domain</title>\\n\\n    <meta charset=\"utf-8\" />\\n    <meta http-equiv=\"Content-type\" content=\"text/html; charset=utf-8\" />\\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />\\n    <style type=\"text/css\">\\n    body {\\n        background-color: #f0f0f2;\\n        margin: 0;\\n        padding: 0;\\n        font-family: -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", \"Open Sans\", \"Helvetica Neue\", Helvetica, Arial, sans-serif;\\n        \\n    }\\n    div {\\n        width: 600px;\\n        margin: 5em auto;\\n        padding: 2em;\\n        background-color: #fdfdff;\\n        border-radius: 0.5em;\\n        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);\\n    }\\n    a:link, a:visited {\\n        color: #38488f;\\n        text-decoration: none;\\n    }\\n    @media (max-width: 700px) {\\n        div {\\n            margin: 0 auto;\\n            width: auto;\\n        }\\n    }\\n    </style>    \\n</head>\\n\\n<body>\\n<div>\\n    <h1>Example Domain</h1>\\n    <p>This domain is for use in illustrative examples in documents. You may use this\\n    domain in literature without prior coordination or asking for permission.</p>\\n    <p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>\\n</div>\\n</body>\\n</html>\\n'"
+       "requests.models.Response"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "import requests\n",
+    "myrequest = requests.get(\"http://example.com\")\n",
     "\n",
-    "result = requests.get(\"http://example.com\")\n",
-    "\n",
-    "result.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bs4\n",
-    "soup = bs4.BeautifulSoup(result.text, \"lxml\" )\n",
     "\n"
    ]
   },
@@ -43,51 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "<bound method PageElement.get_text of <!DOCTYPE html>\n",
-       "<html>\n",
-       "<head>\n",
-       "<title>Example Domain</title>\n",
-       "<meta charset=\"utf-8\"/>\n",
-       "<meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-type\"/>\n",
-       "<meta content=\"width=device-width, initial-scale=1\" name=\"viewport\"/>\n",
-       "<style type=\"text/css\">\n",
-       "    body {\n",
-       "        background-color: #f0f0f2;\n",
-       "        margin: 0;\n",
-       "        padding: 0;\n",
-       "        font-family: -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", \"Open Sans\", \"Helvetica Neue\", Helvetica, Arial, sans-serif;\n",
-       "        \n",
-       "    }\n",
-       "    div {\n",
-       "        width: 600px;\n",
-       "        margin: 5em auto;\n",
-       "        padding: 2em;\n",
-       "        background-color: #fdfdff;\n",
-       "        border-radius: 0.5em;\n",
-       "        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);\n",
-       "    }\n",
-       "    a:link, a:visited {\n",
-       "        color: #38488f;\n",
-       "        text-decoration: none;\n",
-       "    }\n",
-       "    @media (max-width: 700px) {\n",
-       "        div {\n",
-       "            margin: 0 auto;\n",
-       "            width: auto;\n",
-       "        }\n",
-       "    }\n",
-       "    </style>\n",
-       "</head>\n",
-       "<body>\n",
-       "<div>\n",
-       "<h1>Example Domain</h1>\n",
-       "<p>This domain is for use in illustrative examples in documents. You may use this\n",
-       "    domain in literature without prior coordination or asking for permission.</p>\n",
-       "<p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>\n",
-       "</div>\n",
-       "</body>\n",
-       "</html>\n",
-       ">"
+       "'<!doctype html>\\n<html>\\n<head>\\n    <title>Example Domain</title>\\n\\n    <meta charset=\"utf-8\" />\\n    <meta http-equiv=\"Content-type\" content=\"text/html; charset=utf-8\" />\\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />\\n    <style type=\"text/css\">\\n    body {\\n        background-color: #f0f0f2;\\n        margin: 0;\\n        padding: 0;\\n        font-family: -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", \"Open Sans\", \"Helvetica Neue\", Helvetica, Arial, sans-serif;\\n        \\n    }\\n    div {\\n        width: 600px;\\n        margin: 5em auto;\\n        padding: 2em;\\n        background-color: #fdfdff;\\n        border-radius: 0.5em;\\n        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);\\n    }\\n    a:link, a:visited {\\n        color: #38488f;\\n        text-decoration: none;\\n    }\\n    @media (max-width: 700px) {\\n        div {\\n            margin: 0 auto;\\n            width: auto;\\n        }\\n    }\\n    </style>    \\n</head>\\n\\n<body>\\n<div>\\n    <h1>Example Domain</h1>\\n    <p>This domain is for use in illustrative examples in documents. You may use this\\n    domain in literature without prior coordination or asking for permission.</p>\\n    <p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>\\n</div>\\n</body>\\n</html>\\n'"
       ]
      },
      "execution_count": 16,
@@ -96,58 +41,60 @@
     }
    ],
    "source": [
-    "soup.get_text"
+    "myrequest.text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "site_para = soup.select(\"p\")"
+    "import bs4\n",
+    "\n",
+    "mybs4 = bs4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bs4.element.ResultSet"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(site_para)"
+    "\n",
+    "soup = bs4.BeautifulSoup(myrequest.text,\"lxml\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<bound method PageElement.get_text of <p>This domain is for use in illustrative examples in documents. You may use this\n",
-       "    domain in literature without prior coordination or asking for permission.</p>>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Paragraph : ----- 3\n",
+      "<p>This domain is for use in illustrative examples in documents. You may use this\n",
+      "    domain in literature without prior coordination or asking for permission.</p>\n",
+      " Paragraph : ----- 4\n",
+      "<p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>\n"
+     ]
     }
    ],
    "source": [
-    "site_para[0].get_text"
+    "for i in soup.select('p'):\n",
+    "    print (f\" Paragraph : ----- {n}\")\n",
+    "    print(i)\n",
+    "    n = n+1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
