--- a/13-Web-Scraping/Excercise-13.ipynb
+++ b/13-Web-Scraping/Excercise-13.ipynb
@@ -91,10 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Example Domain'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('title')[0].getText()"
+   ]
   },
   {
    "cell_type": "code",
