--- a/03-Methods and Functions/02-Functions-testing.ipynb
+++ b/03-Methods and Functions/02-Functions-testing.ipynb
@@ -103,42 +103,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def EvenCheck(inputlist):\n",
-    "    for i in inputlist:\n",
-    "        #print(f \" List index position {i-1} is : {inputlist[i-1]}\")\n",
-    "        print(\"Hello\")\n",
-    "\n",
-    "        #if inputlist[i] % 2 == 0 :\n",
-    "        #    print(f \"this is even {inputlist[i-1]}\")\n",
-    "        #else:\n",
-    "        #    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-45-263fc5a51ce4>, line 9)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-7f0671f932d6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0msamplelist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m97\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m24\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m526\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mEvenCheck\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msamplelist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-6-cf4ed01cad6d>\u001b[0m in \u001b[0;36mEvenCheck\u001b[1;34m(inputlist)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mEvenCheck\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0minputlist\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\" List index position {i-1} is : {inputlist[i-1]}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m         \u001b[1;31m#if inputlist[i] % 2 == 0 :\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;31m#    print(f \"this is even {inputlist[i-1]}\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-45-263fc5a51ce4>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    print(f \"this is even {inputlist[i-1]}\")\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "#samplelist = [97,24,3,4,526,7,8]\n",
-    "#EvenCheck(samplelist)"
+    "def EvenChecking(inputlist):\n",
+    "    list1 = list(inputlist)\n",
+    "    loopcount = 0 \n",
+    "    for i in list1:\n",
+    "        print(f\"List index position {loopcount} is : {list1[loopcount]}\")\n",
+    "        loopcount = loopcount + 1\n",
+    "            #  print(\"Hello\")\n",
+    "        if inputlist[i] % 2 == 0 :\n",
+    "                print(f \"this is even {inputlist[i-1]}\")\n",
+    "        else:\n",
+    "            pass\n",
+    "        \n",
+    "        #if loopcount == list.count :\n",
+    "        #    break\n",
+    "\n",
+    "        print(\"Hello\")\n",
+    "\n",
+    "#def EvenCheck():\n",
+    "#    print(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List index position 0 is : 97\n",
+      "Hello\n",
+      "List index position 1 is : 24\n",
+      "Hello\n",
+      "List index position 2 is : 3\n",
+      "Hello\n",
+      "List index position 3 is : 4\n",
+      "Hello\n",
+      "List index position 4 is : 526\n",
+      "Hello\n",
+      "List index position 5 is : 7\n",
+      "Hello\n",
+      "List index position 6 is : 8\n",
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "samplelist = [97,24,3,4,526,7,8]\n",
+    "EvenChecking(samplelist)"
    ]
   },
   {
@@ -146,6 +173,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
