--- a/03-Methods and Functions/02-Functions-testing.ipynb
+++ b/03-Methods and Functions/02-Functions-testing.ipynb
@@ -103,63 +103,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-45-263fc5a51ce4>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-45-263fc5a51ce4>\"\u001b[1;36m, line \u001b[1;32m9\u001b[0m\n\u001b[1;33m    print(f \"this is even {inputlist[i-1]}\")\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def EvenChecking(inputlist):\n",
-    "    list1 = list(inputlist)\n",
-    "    loopcount = 0 \n",
-    "    for i in list1:\n",
-    "        print(f\"List index position {loopcount} is : {list1[loopcount]}\")\n",
-    "        loopcount = loopcount + 1\n",
-    "            #  print(\"Hello\")\n",
-    "        if inputlist[i] % 2 == 0 :\n",
-    "                print(f \"this is even {inputlist[i-1]}\")\n",
+    "    for i in inputlist:\n",
+    "        if i%2 == 0:\n",
+    "            print(f\"This is even {i}\")\n",
     "        else:\n",
-    "            pass\n",
-    "        \n",
-    "        #if loopcount == list.count :\n",
-    "        #    break\n",
-    "\n",
-    "        print(\"Hello\")\n",
-    "\n",
-    "#def EvenCheck():\n",
-    "#    print(\"Hello\")"
+    "            pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List index position 0 is : 97\n",
-      "Hello\n",
-      "List index position 1 is : 24\n",
-      "Hello\n",
-      "List index position 2 is : 3\n",
-      "Hello\n",
-      "List index position 3 is : 4\n",
-      "Hello\n",
-      "List index position 4 is : 526\n",
-      "Hello\n",
-      "List index position 5 is : 7\n",
-      "Hello\n",
-      "List index position 6 is : 8\n",
-      "Hello\n"
+      "This is even 24\n",
+      "This is even 4\n",
+      "This is even 526\n",
+      "This is even 8\n"
      ]
     }
    ],
@@ -178,7 +146,149 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Checking for even number and adding to a list then return."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[34, 10, 20, 28]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def CheckEvenAndReturnlist(inputlist):\n",
+    "    #print(\"HELLO\")\n",
+    "    list1 = []\n",
+    "    for i in inputlist:\n",
+    "        if i%2 == 0 :\n",
+    "            list1.append(i)\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "    return list1\n",
+    "    \n",
+    "\n",
+    "INPUT= [23,5,67,34,10,20,28]\n",
+    "CheckEvenAndReturnlist(INPUT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tuple unpacking using for loopcount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Price APPLE ticker 200\n",
+      "Price Google ticker 400\n",
+      "Price msft ticker 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tupunpack(inputtuple):\n",
+    "    for price , ticker in inputtuple:\n",
+    "        print(f\"Price {price} ticker {ticker}\")\n",
+    "\n",
+    "stock_prices = [('APPLE',200), ('Google',400),('msft',100)]\n",
+    "\n",
+    "tupunpack(stock_prices)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tuple unpacking using by function return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Billy', 400)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def employee_check(work_hours):\n",
+    "    current_max = 0\n",
+    "    employee_of_the_month = ' '\n",
+    "    \n",
+    "    for employee,hours in work_hours:\n",
+    "        if hours > current_max:\n",
+    "            current_max = hours\n",
+    "            employee_of_the_month = employee\n",
+    "        else:\n",
+    "            pass\n",
+    "    return(employee_of_the_month,current_max)\n",
+    "\n",
+    "workhours = [(\"abby\",100),('Billy',400)]\n",
+    "\n",
+    "returnvalue = employee_check(workhours)\n",
+    "\n",
+    "returnvalue\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
