--- a/03-Methods and Functions/Excercise/excercise 05 Map.ipynb
+++ b/03-Methods and Functions/Excercise/excercise 05 Map.ipynb
@@ -11,13 +11,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "100\n",
+      "10000\n",
+      "1000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "mylist =[2,10,100,1000]\n",
@@ -39,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "map"
+    " "
    ]
   },
   {
@@ -51,7 +72,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "## Splicer Functions"
+   ]
   },
   {
    "cell_type": "code",
