--- a/03-Methods and Functions/Excercise/excercise 05 Map , Filter and Lambda.ipynb
+++ b/03-Methods and Functions/Excercise/excercise 05 Map , Filter and Lambda.ipynb
@@ -107,7 +107,6 @@
     "def CheckEven(mynums):\n",
     "    return int(mynums) % 2 == 0\n",
     "#         print(\"You have entered even number\")\n",
-    "\n",
     "        \n",
     "CheckEven(\"2\")"
    ]
@@ -219,11 +218,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -273,7 +267,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### Passing multiple arguments to Lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylambda = lambda x,y : x+y\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
