--- a/03-Methods and Functions/Excercise/excercise 05 Map , Filter and Lambda.ipynb
+++ b/03-Methods and Functions/Excercise/excercise 05 Map , Filter and Lambda.ipynb
@@ -304,76 +304,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'__name__': '__main__',\n",
-       " '__doc__': 'Automatically created module for IPython interactive environment',\n",
-       " '__package__': None,\n",
-       " '__loader__': None,\n",
-       " '__spec__': None,\n",
-       " '__builtin__': <module 'builtins' (built-in)>,\n",
-       " '__builtins__': <module 'builtins' (built-in)>,\n",
-       " '_ih': ['',\n",
-       "  'mylambda = lambda x,y : x+y',\n",
-       "  'mylambda = lambda x,y : x+y\\n\\nmylambda(200,100)',\n",
-       "  '# ###################Original function\\ndef mysquire(nums): return nums ** 2\\n\\n###################### When converting to lambda remove the def and funcname with lambda1\\nnums = 100\\nmysquire = lambda nums: nums ** 2',\n",
-       "  'mylist = [2,10,100,1000]\\n\\ndef squire(nums):\\n    #return nums ** 2\\n    print (nums ** 2)\\n\\nlist(map(squire,mylist))',\n",
-       "  'globals()',\n",
-       "  'locals()',\n",
-       "  'globals()'],\n",
-       " '_oh': {2: 300, 4: [None, None, None, None], 5: {...}, 6: {...}},\n",
-       " '_dh': ['C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\03-Methods and Functions\\\\Excercise'],\n",
-       " 'In': ['',\n",
-       "  'mylambda = lambda x,y : x+y',\n",
-       "  'mylambda = lambda x,y : x+y\\n\\nmylambda(200,100)',\n",
-       "  '# ###################Original function\\ndef mysquire(nums): return nums ** 2\\n\\n###################### When converting to lambda remove the def and funcname with lambda1\\nnums = 100\\nmysquire = lambda nums: nums ** 2',\n",
-       "  'mylist = [2,10,100,1000]\\n\\ndef squire(nums):\\n    #return nums ** 2\\n    print (nums ** 2)\\n\\nlist(map(squire,mylist))',\n",
-       "  'globals()',\n",
-       "  'locals()',\n",
-       "  'globals()'],\n",
-       " 'Out': {2: 300, 4: [None, None, None, None], 5: {...}, 6: {...}},\n",
-       " 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x0000021160DCAE08>>,\n",
-       " 'exit': <IPython.core.autocall.ZMQExitAutocall at 0x21160df6808>,\n",
-       " 'quit': <IPython.core.autocall.ZMQExitAutocall at 0x21160df6808>,\n",
-       " '_': {...},\n",
-       " '__': {...},\n",
-       " '___': [None, None, None, None],\n",
-       " '_i': 'locals()',\n",
-       " '_ii': 'globals()',\n",
-       " '_iii': '\\nmylist = [2,10,100,1000]\\n\\ndef squire(nums):\\n    #return nums ** 2\\n    print (nums ** 2)\\n\\nlist(map(squire,mylist))',\n",
-       " '_i1': 'mylambda = lambda x,y : x+y',\n",
-       " 'mylambda': <function __main__.<lambda>(x, y)>,\n",
-       " '_i2': 'mylambda = lambda x,y : x+y\\n\\nmylambda(200,100)',\n",
-       " '_2': 300,\n",
-       " '_i3': '# ###################Original function\\ndef mysquire(nums): return nums ** 2\\n\\n###################### When converting to lambda remove the def and funcname with lambda1\\nnums = 100\\nmysquire = lambda nums: nums ** 2',\n",
-       " 'mysquire': <function __main__.<lambda>(nums)>,\n",
-       " 'nums': 100,\n",
-       " '_i4': '\\nmylist = [2,10,100,1000]\\n\\ndef squire(nums):\\n    #return nums ** 2\\n    print (nums ** 2)\\n\\nlist(map(squire,mylist))',\n",
-       " 'mylist': [2, 10, 100, 1000],\n",
-       " 'squire': <function __main__.squire(nums)>,\n",
-       " '_4': [None, None, None, None],\n",
-       " '_i5': 'globals()',\n",
-       " '_5': {...},\n",
-       " '_i6': 'locals()',\n",
-       " '_6': {...},\n",
-       " '_i7': 'globals()'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "globals()"
+    "# globals()"
    ]
   },
   {
