--- a/03-Methods and Functions/Excercise/Excercisse 06 Nested Statements and Scope.ipynb
+++ b/03-Methods and Functions/Excercise/Excercisse 06 Nested Statements and Scope.ipynb
@@ -1,10 +1,93 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Local Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1 = \"hello\"\n",
+    "\n",
+    "print(var1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how are you \n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello(var1):\n",
+    "    print(var1)\n",
+    "    \n",
+    "hello(\"how are you \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Global variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the new Var1\n",
+      "This is the new Var1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def helloworld():\n",
+    "    global var1\n",
+    "    print(var1)\n",
+    "    ## modifying the global var1\n",
+    "    var1 = \"This is the new Var1\"\n",
+    "\n",
+    "helloworld()\n",
+    "print(var1)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -24,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
