--- a/03-Methods and Functions/Excercise/excercise 08 Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/Excercise/excercise 08 Functions and Methods Homework.ipynb
@@ -131,42 +131,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Write a Python function that accepts a string and calculates the number of upper case letters and lower case letters.**"
+    "**Write a Python function that accepts a string and calculates the number of upper case letters and lower case letters.**\n",
+    "\n",
+    "https://www.w3schools.com/python/ref_string_isupper.asp\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def up_low(inputstr):\n",
+    "    localstr = inputstr.split()\n",
+    "#     tempstring = localstr[i]\n",
+    "#     print(\"Hello\")\n",
+    "    print (len(inputstr))\n",
+    "    for i in inputstr:\n",
+    "        print(f\"Checking {i}\")\n",
+    "        if str(i).isupper():\n",
+    "            print (f\"{i}  is upper case\")\n",
+    "        elif str(i).islower():\n",
+    "            print (f\"{i}  is lower case\")\n",
+    "        else:\n",
+    "            print (f\"{i}  is not upp\")\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-49b62dba1125>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlocalstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mup_low\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"THIS\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-9-49b62dba1125>\u001b[0m in \u001b[0;36mup_low\u001b[1;34m(inputstr)\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;31m#\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m# str(localstr)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Hello\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# if localstr.isupper() :\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "Checking T\n",
+      "T  is upper case\n",
+      "Checking H\n",
+      "H  is upper case\n",
+      "Checking I\n",
+      "I  is upper case\n",
+      "Checking S\n",
+      "S  is upper case\n",
+      "Checking  \n",
+      "Checking ,\n",
+      "Checking k\n",
+      "k  is lower case\n",
+      "Checking j\n",
+      "j  is lower case\n",
+      "Checking h\n",
+      "h  is lower case\n",
+      "Checking F\n",
+      "F  is upper case\n",
+      "Checking k\n",
+      "k  is lower case\n",
+      "Checking  \n",
+      "Checking L\n",
+      "L  is upper case\n",
+      "Checking h\n",
+      "h  is lower case\n"
      ]
     }
    ],
    "source": [
-    "def up_low(inputstr):\n",
-    "    localstr = inputstr.split()\n",
-    "    #   str(inputstr)\n",
-    "    #\n",
-    "    # str(localstr)\n",
-    "    for i in len(inputstr):\n",
-    "        print(\"Hello\")\n",
-    "    # if localstr.isupper() :\n",
-    "            # print(localstr[i]) \n",
-    "        # else :\n",
-    "            # pass\n",
-    "    print(localstr)\n",
-    "        \n",
-    "up_low(\"THIS\")"
+    "up_low(\"THIS ,kjhFk Lh\")"
    ]
   },
   {
@@ -193,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
