--- a/03-Methods and Functions/Excercise/excercise 08 Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/Excercise/excercise 08 Functions and Methods Homework.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,13 +154,13 @@
     "        elif str(i).islower():\n",
     "            print (f\"{i}  is lower case\")\n",
     "        else:\n",
-    "            print (f\"{i}  is not upp\")\n",
+    "            print (f\"{i}  is not upper or lower\")\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,9 @@
       "Checking S\n",
       "S  is upper case\n",
       "Checking  \n",
+      "   is not upper or lower\n",
       "Checking ,\n",
+      ",  is not upper or lower\n",
       "Checking k\n",
       "k  is lower case\n",
       "Checking j\n",
@@ -189,6 +191,7 @@
       "Checking k\n",
       "k  is lower case\n",
       "Checking  \n",
+      "   is not upper or lower\n",
       "Checking L\n",
       "L  is upper case\n",
       "Checking h\n",
