--- a/03-Methods and Functions/Excercise/excercise 08 Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/Excercise/excercise 08 Functions and Methods Homework.ipynb
@@ -138,69 +138,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def up_low(inputstr):\n",
-    "    localstr = inputstr.split()\n",
-    "#     tempstring = localstr[i]\n",
-    "#     print(\"Hello\")\n",
+    "\n",
+    "    lowercases = 0\n",
+    "    uppercases = 0\n",
+    "    \n",
     "    print (len(inputstr))\n",
     "    for i in inputstr:\n",
     "        print(f\"Checking {i}\")\n",
-    "        if str(i).isupper():\n",
+    "        if  str(i).isupper():\n",
     "            print (f\"{i}  is upper case\")\n",
+    "            uppercases = uppercases + 1\n",
     "        elif str(i).islower():\n",
     "            print (f\"{i}  is lower case\")\n",
+    "            lowercases = lowercases + 1\n",
     "        else:\n",
     "            print (f\"{i}  is not upper or lower\")\n",
-    "            "
+    "    return lowercases,uppercases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n",
-      "Checking T\n",
-      "T  is upper case\n",
-      "Checking H\n",
-      "H  is upper case\n",
-      "Checking I\n",
-      "I  is upper case\n",
-      "Checking S\n",
-      "S  is upper case\n",
-      "Checking  \n",
-      "   is not upper or lower\n",
-      "Checking ,\n",
-      ",  is not upper or lower\n",
-      "Checking k\n",
-      "k  is lower case\n",
-      "Checking j\n",
-      "j  is lower case\n",
-      "Checking h\n",
-      "h  is lower case\n",
-      "Checking F\n",
-      "F  is upper case\n",
-      "Checking k\n",
-      "k  is lower case\n",
-      "Checking  \n",
-      "   is not upper or lower\n",
-      "Checking L\n",
-      "L  is upper case\n",
-      "Checking h\n",
-      "h  is lower case\n"
+      "4\n",
+      "Checking a\n",
+      "a  is lower case\n",
+      "Checking b\n",
+      "b  is lower case\n",
+      "Checking c\n",
+      "c  is lower case\n",
+      "Checking d\n",
+      "d  is lower case\n",
+      "(4, 0)\n"
      ]
     }
    ],
    "source": [
-    "up_low(\"THIS ,kjhFk Lh\")"
+    "print ( up_low(\"abcd\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "____\n",
+    "**Write a Python function that takes a list and returns a new list with unique elements of the first list.**\n",
+    "\n",
+    "    Sample List : [1,1,1,1,2,2,3,3,3,3,4,5]\n",
+    "    Unique List : [1, 2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 4, 5, 6, 7}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## convertlisttotuple\n",
+    "def unique_list(lst):\n",
+    "#     pass\n",
+    "#     print(lst)\n",
+    "    myset = set()\n",
+    "    \n",
+    "    for i in lst:\n",
+    "        myset.add(i)\n",
+    "    \n",
+    "    return myset\n",
+    "\n",
+    "\n",
+    "list1 = [3,4,5,6,7]\n",
+    "unique_list(list1)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Write a Python function to multiply all the numbers in a list.**\n",
+    "\n",
+    "    Sample List : [1, 2, 3, -4]\n",
+    "    Expected Output : -24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiply(numbers):  \n",
+    "    \n",
+    "    result = 1\n",
+    "    for i in numbers:\n",
+    "        result = result * i\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1 = [0,2,4,6,-2]\n",
+    "\n",
+    "multiply(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "____\n",
+    "**Write a Python function that checks whether a word or phrase is palindrome or not.**\n",
+    "\n",
+    "Note: A palindrome is word, phrase, or sequence that reads the same backward as forward, e.g., madam,kayak,racecar, or a phrase \"nurses run\". Hint: You may want to check out the .replace() method in a string to help out with dealing with spaces. Also google search how to reverse a string in Python, there are some clever ways to do it with slicing notation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1221\n",
+      "Checking 1\n",
+      "Checking 2\n",
+      "Checking 2\n",
+      "Checking 1\n",
+      "PALINDROME\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = list(input())\n",
+    "for i in range(len(p)):\n",
+    "    if p[i] == p[len(p)-1-i]:\n",
+    "        print (f\"Checking {p[i]}\")\n",
+    "        continue\n",
+    "    else:\n",
+    "         print(\"NOT PALINDROME\")\n",
+    "         break\n",
+    "else:\n",
+    "    print(\"PALINDROME\")"
    ]
   },
   {
