--- a/00-Python Object and Data Structure Basics/Excercise/03-Print Formatting with Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/Excercise/03-Print Formatting with Strings.ipynb
@@ -39,9 +39,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Formatting with placeholders\n",
+    "## %S\n",
+    "\n",
+    "\n",
+    "## <span style='color:Blue'> %S  </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Formatting with placeholders You can use %s\n",
     "You can use <code>%s</code> to inject strings into your print statements. The modulo `%` is referred to as a \"string formatting operator\"."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -49,6 +66,13 @@
    "source": [
     "You can pass multiple items by placing them inside a tuple after the `%` operator."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -64,7 +88,7 @@
     }
    ],
    "source": [
-    "print(\"I'm going to inject %s here\" %'something')\n"
+    "print(\"I'm going to injeddct %s here\" %'something')\n"
    ]
   },
   {
@@ -76,13 +100,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm going to inject some text here, and more text here.\n"
+      " I am going to inject Something here \n"
      ]
     }
    ],
    "source": [
-    "print(\"I'm going to inject %s text here, and %s text here.\" %('some','more'))"
+    "print(\" I am going to inject %s here \" %'Something')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -123,29 +161,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
   },
   {
    "cell_type": "code",
@@ -382,6 +397,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <span style='color:Blue'> .format  </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Formatting with the `.format()` method\n",
     "A better way to format objects into your strings for print statements is with the string `.format()` method. The syntax is:\n",
     "\n",
@@ -392,20 +414,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is a string with an insert\n"
+      "This is a print statement with an Insert\n"
      ]
     }
    ],
    "source": [
-    "print(\"this is a string with an {}\" .format('insert'))"
+    "print(\"This is a print statement with an {}\".format(\"Insert\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
