--- a/00-Python Object and Data Structure Basics/Template.ipynb
+++ b/00-Python Object and Data Structure Basics/Template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2dc1c0aa",
+   "id": "6eb4f4e2",
    "metadata": {},
    "source": [
     "# Templates"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16093d8b",
+   "id": "0052dc9c",
    "metadata": {},
    "source": [
     "Blue color heading"
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac351c89",
+   "id": "c887c30e",
    "metadata": {},
    "source": [
-    "<span style='color:Blue'> Blue is my favorite color.  </span>"
+    "<span style='color:DarkBlue'> Blue is my favorite color.  </span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e874d459",
+   "id": "c19eea1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109836f4",
+   "id": "2de6c601",
    "metadata": {},
    "source": [
-    "<span style='color:Orange'> Yellow heading  </span>"
+    "<span style='color:Maroon'> Yellow heading  </span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b177292",
+   "id": "acb93682",
    "metadata": {},
    "outputs": [],
    "source": []
