--- a/00-Python Object and Data Structure Basics/Excercise/03-Print Formatting with Strings.ipynb
+++ b/00-Python Object and Data Structure Basics/Excercise/03-Print Formatting with Strings.ipynb
@@ -526,6 +526,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style='color:Pink'> Alignment</span> in .format() . <,^, or > to set a left, center or right."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
