--- a/00-Python Object and Data Structure Basics/Template.ipynb
+++ b/00-Python Object and Data Structure Basics/Template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6eb4f4e2",
+   "id": "80db93af",
    "metadata": {},
    "source": [
     "# Templates"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0052dc9c",
+   "id": "2c1c39e9",
    "metadata": {},
    "source": [
     "Blue color heading"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c887c30e",
+   "id": "1389d750",
    "metadata": {},
    "source": [
     "<span style='color:DarkBlue'> Blue is my favorite color.  </span>"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c19eea1a",
+   "id": "ecef17a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2de6c601",
+   "id": "e605ce3b",
    "metadata": {},
    "source": [
-    "<span style='color:Maroon'> Yellow heading  </span>"
+    "<span style='color:Maroon'> Maroon heading  </span>  Sample."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb93682",
+   "id": "366ed937",
    "metadata": {},
    "outputs": [],
    "source": []
